--- a/BeatsPlayerTest/css/main.css
+++ b/BeatsPlayerTest/css/main.css
@@ -328,6 +328,21 @@ main {
 	width: 100%;
 }
 
+#splash {
+	width: 99.5%;
+	height: 100%;
+	text-align: center;
+}
+
+#splash-content > div {
+	width: 100%;
+	height: 100%;
+	display: table-cell;
+	vertical-align: middle;
+	font-size: 2em;
+	font-weight: bold;
+	font-style: normal;
+} 
 #profile {
 	width: 99.5%;
 	text-align: left;
