--- a/BeatsPlayerTest/css/main.css
+++ b/BeatsPlayerTest/css/main.css
@@ -209,6 +209,14 @@ textarea[contenteditable] {
  *
  ****************************************************************/
 
+.gutter {
+	cursor: pointer;
+}
+
+.gutter > div {
+	cursor: pointer;
+}
+
 #current-track-meta-list {
 	display: block;
 	margin: 0;
@@ -263,6 +271,7 @@ textarea[contenteditable] {
 	line-height: 24px;
 	padding: 0 0 0 12px;
 	margin: 0;
+	text-align: left;
 }
 
 #current-track-meta-list > li > span:first-child,
@@ -298,10 +307,15 @@ textarea[contenteditable] {
 #track-tags {
 	width: 91.1%;
 	position: relative;
-	left: 24px;
-	top: -24px;
+	left: 1.5em;
+	top: -1.5em;
 }
 
+@media screen and (orientation: landscape) {
+	#track-tags {
+	  top: 0;
+	}
+}
  
 #audio-player {
 	width: 49.5%;
@@ -313,7 +327,12 @@ textarea[contenteditable] {
 	width: 49.5%;
 	height: 270px;
 	float: right;
-	text-align: center;
+	text-align: right;
+	position: absolute;
+	right: 0;
+	left: auto;
+	top: 0;
+	bottom: auto;
 }
 
 #current-track-description {
@@ -330,8 +349,8 @@ textarea[contenteditable] {
  * Audio player controls interface rules.
  */
 #audio-player a {
-	width: 48px;
-	height: 48px;
+	width: 3em;
+	height: 3em;
 	margin: 0;
 	padding: 0;
 }
@@ -341,8 +360,8 @@ textarea[contenteditable] {
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-position: center center;
-	width: 48px;
-	height: 48px;
+	width: 3em;
+	height: 3em;
 }
 
 #play-pause-button > span.play-state {
@@ -370,19 +389,19 @@ textarea[contenteditable] {
 #volume-controls {
 	opacity: 0;
 	position: relative;
-	top: -24px;
-	left: 48px;
-	height: 6px;
+	top: -2em;
+	left: 3em;
+	height: 1em;
 	width: 0px;
 	border-style: solid;
 	border-width: 1px;
 	border-color: #600;
 	background-color: #600;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	-ms-border-radius: 3px;
-	-o-border-radius: 3px;
-	border-radius: 3px;
+	-webkit-border-radius: 0.2em;
+	-moz-border-radius: 0.2em;
+	-ms-border-radius: 0.2em;
+	-o-border-radius: 0.2em;
+	border-radius: 0.2em;
 	-webkit-transition: width 2s, opacity 2s;
 	-moz-transition: width 2s, opacity 2s;
 	-ms-transition: width 2s, opacity 2s;
@@ -425,9 +444,9 @@ textarea[contenteditable] {
   border-radius: 50%;
   position: absolute;
   left: 64%;
-  top: -4px;
-  height: 0.75em;
-  width: 0.75em;
+  top: -0.3em;
+  height: 1.5em;
+  width: 1.5em;
 }
 
 #audio-player-gutter {
@@ -457,7 +476,7 @@ textarea[contenteditable] {
   -moz-border-radius: 0.2em;
   -ms-border-radius: 0.2em;
   -o-border-radius: 0.2em;
-  border-radius: 0.125em;
+  border-radius: 0.2em;
   margin: 0;
   padding: 0;	
 }
@@ -491,12 +510,20 @@ textarea[contenteditable] {
 	);
 }
 
-.disabled-button {
+.disabled-button,
+  .disabled-button > span
+{
+	-webkit-opacity: 0.5;
+	-moz-opacity: 0.5;
+	-ms-filter: alpha(opacity=50);
 	opacity: 0.5;
 }
 
 .hidden-button {
 	display: none;
+	-webkit-opacity: 0;
+	-moz-opacity: 0;
+	-ms-filter: alpha(opacity=0);
 	opacity: 0;
 	-webkit-transition: opacity 2s ease 0s;
 	-moz-transition: opacity 2s ease 0s;
@@ -507,6 +534,9 @@ textarea[contenteditable] {
 
 .shown-button {
   display: block;
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  -ms-filter: alpha(opacity=100);
   opacity: 1;	
 }
 
@@ -523,7 +553,7 @@ textarea[contenteditable] {
 	 */
 
   #current-track-meta-list > li {
-	  height: 48px;
+	  height: 3em;
 	}
   
   /* #current-track-meta-list > li.indent-level-0 {
@@ -533,27 +563,27 @@ textarea[contenteditable] {
 	
 	#current-track-meta-list > li.indent-level-1 {
 	  top: 0;
-	  left: 48px;
+	  left: 3em;
 	}
 	
 	#current-track-meta-list > li.indent-level-2 {
 	  top: 0;
-	  left: 96px;
+	  left: 6em;
 	}
 	
 	#current-track-meta-list > li.indent-level-3 {
 	  top: 0;
-	  left: 144px;
+	  left: 9em;
 	} */
 		
 	#current-track-meta-list > li > span:last-child {
-	  height: 48px;
-	  line-height: 48px;
+	  height: 3em;
+	  line-height: 3em;
 	}
 	
 	#current-track-meta-list > li > span:first-child {
-	  width: 48px;
-	  height: 48px;
+	  width: 3em;
+	  height: 3em;
 	}
 	  	 
 	#track-title-icon {
@@ -572,43 +602,29 @@ textarea[contenteditable] {
 	  background-image: url('../img/tag-icon-retina-48x48.png');
 	}
   
-	#audio-player a {
-	  width: 96px;
-	  height: 96px;
-	}
-  #rewind-button > span {
-    background-image: url('../img/rewind-button-retina-96x96.png');
+/* 	#audio-player a {
+	  width: 48px;
+	  height: 48px;
+	} */
+	
+/*   #rewind-button > span {
+    background-image: url('../img/rewind-button-retina-48x48.png');
   }
   #play-pause-button > span.play-state {
-    background-image: url('../img/play-button-retina-96x96.png');
+    background-image: url('../img/play-button-retina-48x48.png');
   }
   #play-pause-button > span.pause-state {
-    background-image: url('../img/pause-button-retina-96x96.png');
+    background-image: url('../img/pause-button-retina-48x48.png');
   }
   #stop-button > span {
-    background-image: url('../img/stop-button-retina-96x96.png');
+    background-image: url('../img/stop-button-retina-48x48.png');
   }
   #forward-button > span {
-    background-image: url('../img/forward-button-retina-96x96.png');
+    background-image: url('../img/forward-button-retina-48x48.png');
   }
-  
-  /*
-   * Double the height of the gutter to account for the pixel density
-   * of retina devices.
-   */
-  #audio-player-gutter {
-    height: 24px;
-  }
-  
-  /*
-   * Double the height of the playback position scrubber, and
-   * adjust its top positioning to account for the pixel density
-   * of retina devices.
-   */
-  #audio-player-scrubber {
-    height: 48px;
-    top: -24px;
-  }
+  #volume-button > span {
+    background-image: url('../img/volume-button-retina-48x48.png');
+  } */
 }
 
 /*
@@ -640,13 +656,13 @@ main {
 }
 
 #splash-content > div {
-	width: 128px;
-	height: 86px;
+	width: 8em;
+	height: 5.375em;
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -43px;
-  margin-left: -64px;
+  margin-top: -2.1725em;
+  margin-left: -4em;
   background-image: url('../img/soundcloud_logo.png');
   background-repeat: none;
   background-attachment: scroll;
@@ -669,6 +685,7 @@ main {
   transform: rotate(360deg);
   opacity: 0;
 }
+
 #profile {
 	width: 99.5%;
 	text-align: left;
@@ -677,13 +694,13 @@ main {
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
        only screen and (min-resolution: 144dpi)
 {
-	#splash-content > div {
+	/* #splash-content > div {
 	  width: 256px;
 	  height: 172px;
 	  margin-top: -86px;
 	  margin-left: -128px;
 	  background-image: url('../img/soundcloud_logo-retina.png');
-	}
+	} */
 }
 @media only screen and (min-width: 320px) and (-webkit-min-device-pixel-ratio: 1.5),
   only screen and (min-resolution: 144dpi)
@@ -703,7 +720,7 @@ main {
   main {
     text-align: center;
   }
-  #profile {
+  #profile, #player {
     width: 640px;
     margin: 0 auto;
   }
@@ -718,7 +735,7 @@ main {
   main {
     text-align: left;
   }
-  #profile {
+  #profile, #player {
     width: 99.5%;
     margin: 0;
   }
@@ -734,7 +751,7 @@ main {
 	main {
 	  text-align: center;
 	}
-	#profile {
+	#profile, #player {
 	  width: 800px;
 	  margin: 0 auto;
 	}
