Playback is strong. However, when a new track is selected from going back to the profile page, the track does not change. Much like the profile does not change when a different user is selected.

--- a/BeatsPlayerTest/css/jqm-overrides.css
+++ b/BeatsPlayerTest/css/jqm-overrides.css
@@ -33,3 +33,9 @@
 	  font-size: 0.8em;
 	}
 }
+
+@media only screen and (min-width: 800px) {
+	.ui-mobile [data-role="page"], .ui-mobile [data-role="dialog"], .ui-page {
+	  position: static;
+	}
+}
